# syslog

./: Cargo.toml  README.md
benches/: parse.rs  timestamp.rs
examples/: profile.rs
src/: error.rs  facility.rs  lib.rs  message.rs  parser.rs  procid.rs  rfc5424.rs  severity.rs  structured_data.rs  timestamp.rs
tests/: rfc5424.rs
