[package]
name = "syslog"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "parse"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["plotters"] }
syslog_loose = { version = "0.19", default-features = false }

[dependencies]
chrono = { version = "0.4", default-features = false }
