[package]
name = "syslog"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "timestamp"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
syslog_loose = { version = "0.21", default-features = false }
speedate = { version = "0.14" }
pprof = { version = "0.13", features = ["flamegraph"] }

[dependencies]
chrono = { version = "0.4", default-features = false }
